# contract-evidence-os

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/launchd/: com.contractevidenceos.maintenance.plist
deploy/observability/: grafana-dashboard.json  prometheus.yml
deploy/systemd/: ceos-maintenance.service
docs/adr/: ADR-001-contract-first-runtime.md  ADR-002-evidence-graph-and-shadow-verification.md  ADR-003-governed-evolution-boundaries.md  ADR-004-sqlite-repository-and-migrations.md  ADR-005-crash-resumable-idempotent-runtime.md  ADR-006-provider-routing-and-eval-gating.md  ADR-007-long-horizon-continuity-packets.md  ADR-008-operator-cli-and-approval-inbox.md  ADR-009-continuity-eval-gating.md  ADR-010-live-provider-backends.md  ADR-011-multi-node-execution-and-replanning.md  ADR-012-remote-operator-service.md  ADR-013-second-live-provider-backend.md  ADR-014-scorecard-driven-routing.md  ADR-015-bounded-concurrency-semantics.md  ADR-016-budget-governance-and-execution-modes.md  ADR-017-queueing-and-admission-control.md  ADR-018-provider-health-and-rate-limit-orchestration.md  (+62 more)
examples/: golden_tasks.json  operator_config.json  sample_requirements.txt  sample_task.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: docker-entrypoint.sh  install-maintenance-service.sh  install.sh  start-dispatcher.sh  start-maintenance.sh  start-operator-cli.sh  start-remote-operator.sh  start-worker.sh  uninstall-maintenance-service.sh  uninstall.sh
(+347 files in other folders)
